[package]
name    = "bitfrost"
version = "0.1.0"
edition = "2024"

[dependencies]
web-transport-quinn = "0.9"
quinn               = "0.11"
solana-sdk          = "3.0"
solana-tls-utils    = "3.0"
tokio               = { version = "1", features = ["full"] }
futures-util        = "0.3"
serde               = { version = "1", features = ["derive"] }
bincode             = "1"
anyhow              = "1"
thiserror           = "1"
dashmap             = "6"
log                 = "0.4"
env_logger          = "0.11"
rustls              = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile      = "2"
solana-client       = "3.0.10"

[dev-dependencies]
solana-system-interface = "2.0.0"
url                     = "2"
base64                  = "0.22"

[[example]]
name = "client"
path = "examples/client.rs"

[lib]
name = "bifrost"
path = "src/lib.rs"

[[bin]]
name = "bifrost"
path = "src/main.rs"
